# concept-sidecar-pattern

./: .gitignore  Dockerfile  README.md  job.yaml  main.py  pyproject.toml
yamls/: minio-config.yaml  minio.yaml
